add scroll view to win page which displays path player took to reach kevin bacon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,10 @@
         <activity android:name=".MovieListActivity" />
         <activity android:name=".GameStartActivity" />
         <activity android:name=".ActorListActivity" />
-        <activity android:name=".WinActivity"></activity>
+        <activity
+            android:name=".WinActivity"
+            android:theme="@style/NoActionBarTheme">
+        </activity>
     </application>
 
 </manifest>
